--- a/Hussein-Talal/index.html
+++ b/Hussein-Talal/index.html
@@ -70,6 +70,6 @@
             
         </section>
     </main>
-<script src="index.js"></script>
+<script src="index2.js"></script>
 </body>
 </html>
