changing nav color

--- a/Hussein-Talal/index.html
+++ b/Hussein-Talal/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="deep-purple darken-2">
+        <nav class="deep-purple accent-2">
             <div class="nav-wrapper  center-align">Never forget to do things</div>
         </nav>
     </header>
