--- a/Hussein-Talal/index.html
+++ b/Hussein-Talal/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" color-mode="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +25,14 @@
     </header>
 
     <main>
+        <div class="container dark-toggler">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="label" for="chk">
+            <i class="material-icons tiny yellow-text">brightness_7</i>
+            <i class="material-icons tiny text-white">brightness_4</i>
+            <div class="ball"></div>
+        </label>
+        </div>
         <section class="container">
             <div class="row date">
                 <div class="col s12">
