adding color mode styles

--- a/Hussein-Talal/index.html
+++ b/Hussein-Talal/index.html
@@ -19,15 +19,15 @@
 </head>
 <body>
     <header>
-        <nav class="deep-purple accent-2">
+        <nav>
             <div class="nav-wrapper  center-align">Never forget to do things</div>
         </nav>
     </header>
 
     <main>
         <div class="container dark-toggler">
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
+            <input type="checkbox" class="checkbox" id="checkbox" />
+            <label class="label" for="checkbox">
             <i class="material-icons tiny yellow-text">brightness_7</i>
             <i class="material-icons tiny text-white">brightness_4</i>
             <div class="ball"></div>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <button id="submit" class = "btn waves-effect deep-purple accent-2 z-depth-3"><i class="material-icons left">add</i> Add task</button>
+                            <button id="submit" class = "btn waves-effect z-depth-3"><i class="material-icons left">add</i> Add task</button>
 
                         </div>
                     </div>
