changing nav color and buttons

--- a/Hussein-Talal/index.html
+++ b/Hussein-Talal/index.html
@@ -28,15 +28,15 @@
         <div class="container dark-toggler">
             <input type="checkbox" class="checkbox" id="checkbox" />
             <label class="label" for="checkbox">
-            <i class="material-icons tiny yellow-text">brightness_7</i>
-            <i class="material-icons tiny text-white">brightness_4</i>
-            <div class="ball"></div>
-        </label>
+                <i class="material-icons tiny">brightness_7</i>
+                <i class="material-icons tiny">brightness_4</i>
+                <div class="ball"></div>
+            </label>
         </div>
         <section class="container">
             <div class="row date">
                 <div class="col s12">
-                    <h4>Today : </h4><h4 id="todayDate"></h>
+                    <h4 id="todayDate"></h4>
                 </div>
             </div>
             <p id="msg"></p>
